# mandoc_db_search

./: .gitignore  Cargo.toml  LICENSE  README.md  db.hexdump  man_files.fish  mandoc.db.5
src/: macros.rs  main.rs  page.rs  pages.rs  utils.rs
