[package]
name = "mandoc_db_search"
description = "A simple tool to query a mandoc.db database file."
authors = ["ryanv404"]
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "./README.md"
repository = "https://github.com/ryanv404"
keywords = ["mandoc", "man", "mandoc.db"]
categories = ["command-line-utilities"]
