[package]
name = "mandoc_db_search"
description = "A simple tool to query man page entries in a mandoc.db database file."
authors = ["ryanv404"]
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "./README.md"
repository = "https://github.com/ryanv404/mandoc_db_search.git"
keywords = ["mandoc", "man", "mandoc.db", "database", "search"]
categories = ["command-line-utilities"]
